--- a/material-sheet-fab/build.gradle
+++ b/material-sheet-fab/build.gradle
@@ -13,7 +13,7 @@ ext {
     siteUrl = 'https://github.com/gowong/material-sheet-fab'
     gitUrl = 'https://github.com/gowong/material-sheet-fab.git'
 
-    libraryVersion = '1.2.1'
+    libraryVersion = '1.2.2'
 
     developerId = 'gowong'
     developerName = 'Gordon Wong'
@@ -29,7 +29,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 23
     }
     buildTypes {
@@ -42,6 +42,7 @@ android {
 
 dependencies {
     compile 'com.github.asyl.animation:arcanimator:1.0.0'
+    compile 'com.github.ozodrukh:CircularReveal:2.0.1'
 }
 
 apply from: 'bintray.gradle'
